chore: setting pre-commit hooks

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "simple-git-hooks"
   },
   "dependencies": {
     "preact": "^10.26.9"
@@ -15,7 +16,18 @@
     "@preact/preset-vite": "^2.10.1",
     "@sxzz/eslint-config": "^7.0.4",
     "eslint": "^9.29.0",
+    "lint-staged": "^16.1.2",
+    "prepare": "^0.0.6",
+    "simple-git-hooks": "^2.13.0",
     "typescript": "~5.8.3",
     "vite": "^7.0.0"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpx lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix"
+    ]
   }
 }
